Adds command that will show a list of users

--- a/views/help/overview.jade
+++ b/views/help/overview.jade
@@ -15,6 +15,7 @@ ul
   li signout
   li resetpassword
   li updateaccount
+  li users
 
 p For more information about each command, type something similar to the following:
 
