--- a/views/help/updateaccount.jade
+++ b/views/help/updateaccount.jade
@@ -8,7 +8,7 @@ p
 p /updateaccount -username newusername
 
 p
-  strong Parameters:
+  strong Arguments:
 
 ul
   li <strong>u</strong> or <strong>username</strong>: Desired username
