--- a/views/help/resetpassword.jade
+++ b/views/help/resetpassword.jade
@@ -8,7 +8,7 @@ p
 p /resetpassword -email user@gmail.com
 
 p
-  strong Parameters:
+  strong Arguments:
 
 ul
   li <strong>e</strong> or <strong>email</strong>: Email address to send password reset link to.
