--- a/views/help/signin.jade
+++ b/views/help/signin.jade
@@ -8,7 +8,7 @@ p
 p /signin -email user@gmail.com -password supersecretpwd
 
 p
-  strong Parameters:
+  strong Arguments:
 
 ul
   li <strong>e</strong> or <strong>email</strong>: User's email address
