--- a/views/help/signup.jade
+++ b/views/help/signup.jade
@@ -8,7 +8,7 @@ p
 p /signup -username dan -email user@gmail.com -password supersecretpwd
 
 p
-  strong Parameters:
+  strong Arguments:
 
 ul
   li <strong>u</strong> or <strong>username</strong>: Desired username
