Adds command history and improves look and command input

--- a/views/help/move.jade
+++ b/views/help/move.jade
@@ -5,7 +5,7 @@ p Moves user to a new environment.
 p
   strong Example:
 
-p /moveto -name GloboCorp HQ Lawn
+p /move -name GloboCorp HQ Lawn
 
 p
   strong Parameters:
