--- a/views/help/help.jade
+++ b/views/help/help.jade
@@ -5,10 +5,10 @@ p Provides user with instructions on how to use this program.
 p
   strong Example:
 
-p /help -command signup
+p /help signup
 
 p
-  strong Parameters:
+  strong Arguments:
 
 ul
   li <strong>c</strong> or <strong>command</strong>: Name of command you wish to run.
