--- a/views/help/overview.jade
+++ b/views/help/overview.jade
@@ -10,8 +10,11 @@ p Available commands:
 
 ul
   li help
+  li drop
+  li inventory
   li look
   li move
+  li pickup
   li signup
   li signin
   li signout
