--- a/views/look.jade
+++ b/views/look.jade
@@ -19,4 +19,12 @@ if occupants.length
     each occupant in occupants
       li= occupant.username
 
+if items.length
+
+  p Items:
+
+  ul
+    each item in items
+      li= item.name
+
 br
