Environments can now require items in order to be entered

--- a/views/inventory.jade
+++ b/views/inventory.jade
@@ -7,7 +7,9 @@ if items.length
 
   ul
     each item in items
-      li= item.name
+      li
+        strong= item.name
+        span : #{item.description}
 
 else
 
