--- a/views/home.jade
+++ b/views/home.jade
@@ -1,6 +1,6 @@
 html
   head
-    title Lounge
+    title= title
     link(type='text/css',rel='stylesheet',href='/css/site.css')
     script(type='text/javascript',src='#{protocol}://#{ip}:#{port}/socket.io/socket.io.js')
     script(type='text/javascript',src='/bower_components/jquery/dist/jquery.js')
