--- a/views/home.jade
+++ b/views/home.jade
@@ -9,6 +9,7 @@ html
       var TOKEN = '#{authToken}';
       var IP = '#{ip}';
       var PORT = '#{port}';
+      var BANNER = "#{siteBanner}";
   body
 
     // Messages
