--- a/views/home.jade
+++ b/views/home.jade
@@ -2,7 +2,7 @@ html
   head
     title= title
     link(type='text/css',rel='stylesheet',href='/css/site.css')
-    script(type='text/javascript',src='#{protocol}://#{ip}:#{port}/socket.io/socket.io.js')
+    script(type='text/javascript',src='#{protocol}://#{host}:#{port}/socket.io/socket.io.js')
     script(type='text/javascript',src='/bower_components/jquery/dist/jquery.js')
     script(type='text/javascript',src='/dist/main.js')
     script.
