--- a/views/home.jade
+++ b/views/home.jade
@@ -13,6 +13,7 @@ html
     script(type='text/javascript',src='/js/lounge/lib/store.js')
     script(type='text/javascript',src='/js/lounge/stores/activities.js')
     script(type='text/javascript',src='/js/lounge/stores/messages.js')
+    script(type='text/javascript',src='/js/lounge/components/activity.js')
     script(type='text/javascript',src='/js/lounge/components/activities.js')
     script(type='text/javascript',src='/js/lounge/components/chat.js')
     script(type='text/javascript',src='/js/lounge/components/messages.js')
